v3.0.0/_sources/plugins/sensor_test_template_duplicate_module.rst.txt
.. Document meta

:orphan:

.. Anchors

.. _ansible_collections.cisco.dnac.sensor_test_template_duplicate_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.dnac.sensor_test_template_duplicate -- Resource module for Sensor Test Template Duplicate
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `cisco.dnac collection <https://galaxy.ansible.com/cisco/dnac>`_ (version 3.0.0).

    To install it use: :code:`ansible-galaxy collection install cisco.dnac`.

    To use it in a playbook, specify: :code:`cisco.dnac.sensor_test_template_duplicate`.

.. version_added

.. versionadded:: 1.0.0 of cisco.dnac

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Manage operation update of the resource Sensor Test Template Duplicate.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- dnacentersdk


.. Options

Parameters
----------

.. raw:: html

    <table  border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Parameter</th>
            <th>Choices/<font color="blue">Defaults</font></th>
                        <th width="100%">Comments</th>
        </tr>
                    <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-newTemplateName"></div>
                    <b>newTemplateName</b>
                    <a class="ansibleOptionLink" href="#parameter-newTemplateName" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Sensor Test Template Duplicate&#x27;s newTemplateName.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-templateName"></div>
                    <b>templateName</b>
                    <a class="ansibleOptionLink" href="#parameter-templateName" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Sensor Test Template Duplicate&#x27;s templateName.</div>
                                                        </td>
            </tr>
                        </table>
    <br/>

.. Notes


.. Seealso

See Also
--------

.. seealso::

   `Sensor Test Template Duplicate reference <https://dnacentersdk.readthedocs.io/en/latest/api/api.html#v3-0-0-summary>`_
       Complete reference of the Sensor Test Template Duplicate object model.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Update all
      cisco.dnac.sensor_test_template_duplicate:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        newTemplateName: string
        templateName: string





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. raw:: html

    <table border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Key</th>
            <th>Returned</th>
            <th width="100%">Description</th>
        </tr>
                    <tr>
                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="return-dnac_response"></div>
                    <b>dnac_response</b>
                    <a class="ansibleOptionLink" href="#return-dnac_response" title="Permalink to this return value"></a>
                    <div style="font-size: small">
                      <span style="color: purple">dictionary</span>
                                          </div>
                                    </td>
                <td>always</td>
                <td>
                                            <div>A dictionary or list with the response returned by the Cisco DNAC Python SDK</div>
                                        <br/>
                                            <div style="font-size: smaller"><b>Sample:</b></div>
                                                <div style="font-size: smaller; color: blue; word-wrap: break-word; word-break: break-all;">{
      &quot;version&quot;: &quot;string&quot;,
      &quot;response&quot;: {
        &quot;_id&quot;: &quot;string&quot;,
        &quot;name&quot;: &quot;string&quot;,
        &quot;version&quot;: 0,
        &quot;modelVersion&quot;: 0,
        &quot;startTime&quot;: 0,
        &quot;lastModifiedTime&quot;: 0,
        &quot;numAssociatedSensor&quot;: 0,
        &quot;location&quot;: {},
        &quot;siteHierarchy&quot;: {},
        &quot;status&quot;: &quot;string&quot;,
        &quot;connection&quot;: &quot;string&quot;,
        &quot;frequency&quot;: {},
        &quot;rssiThreshold&quot;: 0,
        &quot;numNeighborAPThreshold&quot;: 0,
        &quot;scheduleInDays&quot;: 0,
        &quot;wlans&quot;: [
          {}
        ],
        &quot;ssids&quot;: [
          {
            &quot;bands&quot;: {},
            &quot;ssid&quot;: &quot;string&quot;,
            &quot;profileName&quot;: &quot;string&quot;,
            &quot;authType&quot;: &quot;string&quot;,
            &quot;authTypeRcvd&quot;: {},
            &quot;psk&quot;: &quot;string&quot;,
            &quot;username&quot;: {},
            &quot;password&quot;: {},
            &quot;eapMethod&quot;: {},
            &quot;scep&quot;: true,
            &quot;authProtocol&quot;: {},
            &quot;certfilename&quot;: {},
            &quot;certxferprotocol&quot;: &quot;string&quot;,
            &quot;certstatus&quot;: &quot;string&quot;,
            &quot;certpassphrase&quot;: {},
            &quot;certdownloadurl&quot;: {},
            &quot;numAps&quot;: 0,
            &quot;numSensors&quot;: 0,
            &quot;layer3webAuthsecurity&quot;: {},
            &quot;layer3webAuthuserName&quot;: {},
            &quot;layer3webAuthpassword&quot;: {},
            &quot;extWebAuthVirtualIp&quot;: {},
            &quot;layer3webAuthEmailAddress&quot;: {},
            &quot;qosPolicy&quot;: &quot;string&quot;,
            &quot;extWebAuth&quot;: true,
            &quot;whiteList&quot;: true,
            &quot;extWebAuthPortal&quot;: {},
            &quot;extWebAuthAccessUrl&quot;: {},
            &quot;extWebAuthHtmlTag&quot;: [
              {}
            ],
            &quot;thirdParty&quot;: {
              &quot;selected&quot;: true
            },
            &quot;id&quot;: 0,
            &quot;wlanId&quot;: 0,
            &quot;wlc&quot;: {},
            &quot;validFrom&quot;: 0,
            &quot;validTo&quot;: 0,
            &quot;status&quot;: &quot;string&quot;,
            &quot;tests&quot;: [
              {
                &quot;name&quot;: &quot;string&quot;,
                &quot;config&quot;: [
                  {}
                ]
              }
            ]
          }
        ],
        &quot;testScheduleMode&quot;: &quot;string&quot;,
        &quot;showWlcUpgradeBanner&quot;: true,
        &quot;radioAsSensorRemoved&quot;: true,
        &quot;encryptionMode&quot;: &quot;string&quot;,
        &quot;runNow&quot;: &quot;string&quot;,
        &quot;locationInfoList&quot;: [
          {
            &quot;locationId&quot;: &quot;string&quot;,
            &quot;locationType&quot;: &quot;string&quot;,
            &quot;allSensors&quot;: true,
            &quot;siteHierarchy&quot;: &quot;string&quot;,
            &quot;macAddressList&quot;: [
              {}
            ]
          }
        ],
        &quot;schedule&quot;: {
          &quot;testScheduleMode&quot;: &quot;string&quot;,
          &quot;scheduleRange&quot;: [
            {
              &quot;timeRange&quot;: [
                {
                  &quot;from&quot;: &quot;string&quot;,
                  &quot;to&quot;: &quot;string&quot;,
                  &quot;frequency&quot;: {
                    &quot;value&quot;: 0,
                    &quot;unit&quot;: &quot;string&quot;
                  }
                }
              ],
              &quot;day&quot;: &quot;string&quot;
            }
          ],
          &quot;startTime&quot;: 0,
          &quot;frequency&quot;: {
            &quot;value&quot;: 0,
            &quot;unit&quot;: &quot;string&quot;
          }
        },
        &quot;tests&quot;: {},
        &quot;sensors&quot;: [
          {}
        ],
        &quot;apCoverage&quot;: [
          {
            &quot;bands&quot;: &quot;string&quot;,
            &quot;numberOfApsToTest&quot;: 0,
            &quot;rssiThreshold&quot;: 0
          }
        ],
        &quot;testDurationEstimate&quot;: 0,
        &quot;testTemplate&quot;: true,
        &quot;legacyTestSuite&quot;: true,
        &quot;tenantId&quot;: {}
      }
    }</div>
                                    </td>
            </tr>
                        </table>
    <br/><br/>

..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

